# cpp-mini-chromium-template

./: .clang-format  .gclient  .gitignore  .gitmodules  .gn  .travis.yml  BUILD.gn  CLAUDE.md  CMakeLists.txt  DEPS  LICENSE  README.md  hello.cc  hello_shared.cc  hello_shared.h  hello_static.cc  run_test.sh
.circleci/: config.yml
.github/workflows/: main.yml
src/: CMakeLists.txt  hello.cc  hello_static.h  main.cc
test/: CMakeLists.txt  hello_test.cc  main_test.cc
