# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello") {
  configs -= [ "//build/config:c++11" ]
  configs += [ "//build/config:c++14" ]

  sources = [
    "hello.cc",
  ]

  deps = [
    ":hello_shared",
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  configs -= [ "//build/config:c++11" ]
  configs += [ "//build/config:c++14" ]

  sources = [
    "hello_shared.cc",
    "hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  configs -= [ "//build/config:c++11" ]
  configs += [ "//build/config:c++14" ]

  sources = [
    "hello_static.cc",
    "hello_static.h",
  ]
}

executable("main") {
  configs -= [ "//build/config:c++11" ]
  configs += [ "//build/config:c++14" ]

  sources = [
    "src/main.cc",
    "src/main.h",
  ]
}

executable("main_unittest") {
  testonly = true
  configs -= [ "//build/config:c++11" ]
  configs += [ "//build/config:c++14" ]

  sources = [
    "test/main_test.cc",
  ]

  deps = [
    ":hello_shared",
    "//third_party/googletest:gtest",
  ]
}

