import("//build/test.gni")

executable("hello") {
  sources = [
    "hello.cc",
  ]

  deps = [
    ":hello_static",
  ]
}

static_library("hello_static") {
  sources = [
    "hello_static.cc",
    "hello_static.h",
  ]
}

executable("main") {
  sources = [
    "src/main.cc",
    "src/main.h",
  ]
}

test("hello_unittest") {
  sources = [
    "test/hello_test.cc",
  ]

  deps = [
    ":hello_static",
    "//third_party/googletest:gtest",
  ]
}
