import("//build/test.gni")

executable("hello") {
  sources = [
    "src/hello.cc",
  ]

  deps = [
    ":hello_static",
  ]
}

static_library("hello_static") {
  sources = [
    "src/hello_static.cc",
    "src/hello_static.h",
  ]
}

test("hello_unittest") {
  sources = [
    "test/hello_test.cc",
  ]

  include_dirs = [ "src" ]

  deps = [
    ":hello_static",
    "//third_party/googletest:gtest",
  ]
}
